--- a/www/src/docs/BadgeDocs.mdx
+++ b/www/src/docs/BadgeDocs.mdx
@@ -6,12 +6,24 @@ import BadgeApi from "./BadgeApi";
 <GithubSource name="BadgeDocs.mdx" />
 # Badges
 
-<p class="lead">
+<p className="lead">
   Badges scale to match the size of the immediate parent element by
   using relative font sizing and em units.
 </p>
 
-<div class="row gy-5 pt-3">
+<div className="row gy-5 pt-3">
+
+    <Example title="">
+    <Example.Intro>
+    </Example.Intro>
+    <Example.Preview>
+    </Example.Preview>
+    <Example.Code>
+      ```js
+      ```
+    </Example.Code>
+  </Example>
+
 
   <Example title="Examples">
     <Example.Preview>
