Docs - remove references to react

--- a/www/src/docs/ButtonApi.mdx
+++ b/www/src/docs/ButtonApi.mdx
@@ -49,7 +49,7 @@
         <tr><td>checked</td><td><div>boolean</div></td><td></td><td><div><p>The checked state of the input, managed by `<ToggleButtonGroup>` automatically</p></div></td></tr>
         <tr><td>disabled</td><td><div>boolean</div></td><td></td><td><div><p>The disabled state of both the label and input</p></div></td></tr>
         <tr><td>id<sup class="text-danger">required</sup></td><td><div>string</div></td><td></td><td><div><p>`id` is required for button clicks to toggle input.</p></div></td></tr>
-        <tr><td>inputRef</td><td><div>ReactRef</div></td><td></td><td><div><p>A ref attached to the `<input>` element</p></div></td></tr>
+        <tr><td>inputRef</td><td><div></div></td><td></td><td><div><p>A ref attached to the `<input>` element</p></div></td></tr>
         <tr><td>name</td><td><div>string</div></td><td></td><td><div><p>The HTML input name, used to group like checkboxes or radio buttons together semantically</p></div></td></tr>
         <tr><td>onChange</td><td><div>function</div></td><td></td><td><div><p>A callback fired when the underlying input element changes. This is passed directly to the `<input>` so shares the same signature as a native `onChange` event.</p></div></td></tr>
         <tr><td>type</td><td><div><span>`'checkbox'`<span> | </span>`'radio'`</span></div></td><td></td><td><div><p>The `<input>` element `type`</p></div></td></tr>
