--- a/www/src/docs/ButtonDocs.mdx
+++ b/www/src/docs/ButtonDocs.mdx
@@ -79,7 +79,7 @@ import ButtonApi from "./ButtonApi.mdx";
 
   <Example title="Button tags">
     <Example.Intro>
-      Normally `<Button>` components will render a HTML `<button>` element. However you can render whatever you'd like, adding a href prop will automatically render an `<a />` element. You can use the `as` prop to render whatever your heart desires. React Bootstrap will take care of the proper ARIA roles for you.
+      Normally `<Button>` components will render a HTML `<button>` element. However you can render whatever you'd like, adding a href prop will automatically render an `<a />` element. You can use the `as` prop to render whatever your heart desires. Solid Bootstrap will take care of the proper ARIA roles for you.
     </Example.Intro>
     <Example.Preview>
     {<>
