--- a/www/src/docs/CardsDocs.mdx
+++ b/www/src/docs/CardsDocs.mdx
@@ -407,7 +407,7 @@ import CardsApi from "./CardsApi";
 
   <Example title="Navigation">
     <Example.Intro>
-      Add some navigation to a card’s header (or block) with React Bootstrap's Nav components.
+      Add some navigation to a card’s header (or block) with Solid Bootstrap's Nav components.
     </Example.Intro>
     <Example.Preview>
       <Card>
