--- a/www/src/docs/DropdownDocs.mdx
+++ b/www/src/docs/DropdownDocs.mdx
@@ -64,7 +64,7 @@ compliant with the ARIA authoring guidelines for menus.
         </Dropdown.Menu>
       </Dropdown>
       <div className="mt-4 mb-3">
-        Since the above is such a common configuration react-bootstrap provides
+        Since the above is such a common configuration solid-bootstrap provides
         the `<DropdownButton>` component to help reduce typing. Provide
         a `title` prop and some `<DropdownItem>`s and you're
         ready to go.
@@ -376,7 +376,7 @@ compliant with the ARIA authoring guidelines for menus.
     <Example.Preview>
       <Navbar variant="dark" bg="dark" expand="lg">
         <Container fluid>
-          <Navbar.Brand href="#home">React-Bootstrap</Navbar.Brand>
+          <Navbar.Brand href="#home">Solid-Bootstrap</Navbar.Brand>
           <Navbar.Toggle aria-controls="navbar-dark-example" />
           <Navbar.Collapse id="navbar-dark-example">
             <Nav>
@@ -400,7 +400,7 @@ compliant with the ARIA authoring guidelines for menus.
       ```js
       <Navbar variant="dark" bg="dark" expand="lg">
         <Container fluid>
-          <Navbar.Brand href="#home">React-Bootstrap</Navbar.Brand>
+          <Navbar.Brand href="#home">Solid-Bootstrap</Navbar.Brand>
           <Navbar.Toggle aria-controls="navbar-dark-example" />
           <Navbar.Collapse id="navbar-dark-example">
             <Nav>
