--- a/www/src/docs/FormChecksDocs.mdx
+++ b/www/src/docs/FormChecksDocs.mdx
@@ -241,7 +241,7 @@ For the non-textual checkbox and radio controls, `FormCheck` provides a single c
     <tr><th>Name</th><th>Type</th><th>Default</th><th>Description</th></tr>
   </thead>
   <tbody>
-    <tr><td>ref </td><td><div>ReactRef</div></td><td></td><td><div><p>The FormCheck <code>ref</code> will be forwarded to the underlying input element, which means it will be a DOM node, when resolved.</p></div></td></tr>
+    <tr><td>ref </td><td><div></div></td><td></td><td><div><p>The FormCheck <code>ref</code> will be forwarded to the underlying input element, which means it will be a DOM node, when resolved.</p></div></td></tr>
     <tr><td>as </td><td><div>'input' | elementType</div></td><td><code>'input'</code></td><td><div><p>The underlying HTML element to use when rendering the FormCheck.</p></div></td></tr>
     <tr><td>disabled </td><td><div>boolean</div></td><td><code>false</code></td><td><div><p>Disables the control.</p></div></td></tr>
     <tr><td>feedback </td><td><div>node</div></td><td></td><td><div><p>A message to display when the input is in a validation state</p></div></td></tr>
