--- a/www/src/docs/FormControlDocs.mdx
+++ b/www/src/docs/FormControlDocs.mdx
@@ -272,7 +272,7 @@ import BadgeApi from "./BadgeApi";
     <tr><th>Name</th><th>Type</th><th>Default</th><th>Description</th></tr>
   </thead>
   <tbody>
-    <tr><td>ref </td><td><div>ReactRef</div></td><td></td><td><div><p>The FormControl <code>ref</code> will be forwarded to the underlying input element, which means unless <code>as</code> is a composite component, it will be a DOM node, when resolved.</p></div></td></tr><tr><td>as </td><td><div>'input' | 'textarea' | elementType</div></td><td><code >'input'</code></td><td><div><p>The underlying HTML element to use when rendering the FormControl.</p></div></td></tr>
+    <tr><td>ref </td><td><div></div></td><td></td><td><div><p>The FormControl <code>ref</code> will be forwarded to the underlying input element, which means unless <code>as</code> is a composite component, it will be a DOM node, when resolved.</p></div></td></tr><tr><td>as </td><td><div>'input' | 'textarea' | elementType</div></td><td><code >'input'</code></td><td><div><p>The underlying HTML element to use when rendering the FormControl.</p></div></td></tr>
     <tr><td>disabled </td><td><div>boolean</div></td><td></td><td><div><p>Make the control disabled</p></div></td></tr>
     <tr><td>htmlSize </td><td><div>number</div></td><td></td><td><div><p>The size attribute of the underlying HTML element. Specifies the visible width in characters if <code>as</code> is <code>'input'</code>.</p></div></td></tr>
     <tr><td>id </td><td><div>string</div></td><td></td><td><div><p>Uses <code>controlId</code> from <code>&lt;FormGroup&gt;</code> if not explicitly specified.</p></div></td></tr>
