--- a/www/src/docs/FormLayoutDocs.mdx
+++ b/www/src/docs/FormLayoutDocs.mdx
@@ -514,7 +514,7 @@ be used to vary this layout on a per-form basis.
     <tr><th>Name</th><th>Type</th><th>Default</th><th>Description</th></tr>
   </thead>
   <tbody>
-    <tr><td>ref </td><td><div>ReactRef</div></td><td></td><td><div><p>The FormGroup <code>ref</code> will be forwarded to the underlying element. Unless the FormGroup is rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
+    <tr><td>ref </td><td><div></div></td><td></td><td><div><p>The FormGroup <code>ref</code> will be forwarded to the underlying element. Unless the FormGroup is rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
     <tr><td>as </td><td><div>elementType</div></td><td><code>`<div>`</code></td><td><div><p>You can use a custom element type for this component.</p></div></td></tr>
     <tr><td>controlId </td><td><div>string</div></td><td></td><td><div><p>Sets <code>id</code> on <code>&lt;FormControl&gt;</code> and <code>htmlFor</code> on <code>&lt;FormGroup.Label&gt;</code>.</p></div></td></tr>
   </tbody>
