--- a/www/src/docs/FormOverviewDocs.mdx
+++ b/www/src/docs/FormOverviewDocs.mdx
@@ -210,7 +210,7 @@ import BadgeApi from "./BadgeApi";
     <tr><th>Name</th><th>Type</th><th>Default</th><th>Description</th></tr>
   </thead>
   <tbody>
-    <tr><td>ref </td><td><div>ReactRef</div></td><td></td><td><div><p>The Form <code>ref</code> will be forwarded to the underlying element, which means, unless it's rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
+    <tr><td>ref </td><td><div></div></td><td></td><td><div><p>The Form <code>ref</code> will be forwarded to the underlying element, which means, unless it's rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
     <tr><td>as </td><td><div>elementType</div></td><td><code>`<form>`</code></td><td><div><p>You can use a custom element type for this component.</p></div></td></tr>
     <tr><td>validated </td><td><div>boolean</div></td><td></td><td><div><p>Mark a form as having been validated. Setting it to <code>true</code> will toggle any validation styles on the forms elements.</p></div></td></tr>
   </tbody>
@@ -224,7 +224,7 @@ import BadgeApi from "./BadgeApi";
     <tr><th>Name</th><th>Type</th><th>Default</th><th>Description</th></tr>
   </thead>
   <tbody>
-    <tr><td>ref </td><td><div>ReactRef</div></td><td></td><td><div><p>The FormLabel <code>ref</code> will be forwarded to the underlying element. Unless the FormLabel is rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
+    <tr><td>ref </td><td><div></div></td><td></td><td><div><p>The FormLabel <code>ref</code> will be forwarded to the underlying element. Unless the FormLabel is rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
     <tr><td>as </td><td><div>elementType</div></td><td><code>`<label>`</code></td><td><div><p>Set a custom element for this component</p></div></td></tr>
     <tr><td>column </td><td><div>boolean | <span><code>'sm'</code><span> | </span><code>'lg'</code></span></div></td><td><code>false</code></td><td><div><p>Renders the FormLabel as a <code>`<Col>`</code> component (accepting all the same props), as well as adding additional styling for horizontal forms.</p></div></td></tr>
     <tr><td>htmlFor </td><td><div>string</div></td><td></td><td><div><p>Uses <code>controlId</code> from <code>`<FormGroup>`</code> if not explicitly specified.</p></div></td></tr>
