--- a/www/src/docs/FormTextDocs.mdx
+++ b/www/src/docs/FormTextDocs.mdx
@@ -69,7 +69,7 @@ import BadgeApi from "./BadgeApi";
     <tr><th>Name</th><th>Type</th><th>Default</th><th>Description</th></tr>
   </thead>
   <tbody>
-    <tr><td>ref </td><td><div>ReactRef</div></td><td></td><td><div><p>The FormText <code>ref</code> will be forwarded to the underlying element. Unless the FormText is rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
+    <tr><td>ref </td><td><div></div></td><td></td><td><div><p>The FormText <code>ref</code> will be forwarded to the underlying element. Unless the FormText is rendered <code>as</code> a composite component, it will be a DOM node, when resolved.</p></div></td></tr>
     <tr><td>as </td><td><div>elementType</div></td><td><code>`<small>`</code></td><td><div><p>You can use a custom element type for this component.</p></div></td></tr>
     <tr><td>muted </td><td><div>boolean</div></td><td></td><td><div><p>A convenience prop for add the <code>text-muted</code> class, since it's so commonly used here.</p></div></td></tr>
     <tr><td>bsPrefix </td><td><div>string</div></td><td><code>'form-text'</code></td><td><div><p>Change the underlying component CSS base class name and modifier class names prefix. <strong>This is an escape hatch</strong> for working with heavily customized bootstrap css.</p></div></td></tr>
