--- a/www/src/docs/FormValidationDocs.mdx
+++ b/www/src/docs/FormValidationDocs.mdx
@@ -128,8 +128,7 @@ import BadgeApi from "./BadgeApi";
   </Alert>
 
   <Alert variant="info">
-    It's often beneficial to handle form validation
-    via a library like Formik, or react-formal. In those cases, `isValid`
+    It's often beneficial to handle form validation via a library. In those cases, `isValid`
     and `isInvalid` props can be added to form controls to manually apply
     validation styles.
   </Alert>
