--- a/www/src/docs/ModalDocs.mdx
+++ b/www/src/docs/ModalDocs.mdx
@@ -27,7 +27,7 @@ import styles from "./ModalDocs.module.css";
 - Modals are <em>unmounted</em> when closed.
 - Bootstrap only supports <strong>one</strong> modal window at a time.
   Nested modals aren't supported, but if you really need them, the
-  underlying <code>@restart/ui</code> library can support them if you're
+  underlying [Core components](../core/modal) can support them if you're
   willing.
 - Modal's "trap" focus in them, ensuring the keyboard navigation cycles
   through the modal, and not the rest of the page.
