--- a/www/src/docs/ProgressBarDocs.mdx
+++ b/www/src/docs/ProgressBarDocs.mdx
@@ -125,17 +125,17 @@ import ProgressBarApi from "./ProgressBarApi";
     </Example.Intro>
     <Example.Preview>
       <ProgressBar>
-        <ProgressBar striped variant="success" now={35} key={1} />
-        <ProgressBar variant="warning" now={20} key={2} />
-        <ProgressBar striped variant="danger" now={10} key={3} />
+        <ProgressBar striped variant="success" now={35} />
+        <ProgressBar variant="warning" now={20} />
+        <ProgressBar striped variant="danger" now={10}  />
       </ProgressBar>
     </Example.Preview>
     <Example.Code>
       ```js
       <ProgressBar>
-        <ProgressBar striped variant="success" now={35} key={1} />
-        <ProgressBar variant="warning" now={20} key={2} />
-        <ProgressBar striped variant="danger" now={10} key={3} />
+        <ProgressBar striped variant="success" now={35} />
+        <ProgressBar variant="warning" now={20} />
+        <ProgressBar striped variant="danger" now={10} />
       </ProgressBar>
       ```
     </Example.Code>
