--- a/www/src/docs/TableDocs.mdx
+++ b/www/src/docs/TableDocs.mdx
@@ -237,7 +237,7 @@ import TableApi from "./TableApi";
           <tr>
             <th>#</th>
             {Array.from({ length: 12 }).map((_, index) => (
-              <th key={index}>Table heading</th>
+              <th>Table heading</th>
             ))}
           </tr>
         </thead>
@@ -245,19 +245,19 @@ import TableApi from "./TableApi";
           <tr>
             <td>1</td>
             {Array.from({ length: 12 }).map((_, index) => (
-              <td key={index}>Table cell {index}</td>
+              <td>Table cell {index}</td>
             ))}
           </tr>
           <tr>
             <td>2</td>
             {Array.from({ length: 12 }).map((_, index) => (
-              <td key={index}>Table cell {index}</td>
+              <td>Table cell {index}</td>
             ))}
           </tr>
           <tr>
             <td>3</td>
             {Array.from({ length: 12 }).map((_, index) => (
-              <td key={index}>Table cell {index}</td>
+              <td>Table cell {index}</td>
             ))}
           </tr>
         </tbody>
@@ -270,7 +270,7 @@ import TableApi from "./TableApi";
           <tr>
             <th>#</th>
             {Array.from({ length: 12 }).map((_, index) => (
-              <th key={index}>Table heading</th>
+              <th>Table heading</th>
             ))}
           </tr>
         </thead>
@@ -278,19 +278,19 @@ import TableApi from "./TableApi";
           <tr>
             <td>1</td>
             {Array.from({ length: 12 }).map((_, index) => (
-              <td key={index}>Table cell {index}</td>
+              <td>Table cell {index}</td>
             ))}
           </tr>
           <tr>
             <td>2</td>
             {Array.from({ length: 12 }).map((_, index) => (
-              <td key={index}>Table cell {index}</td>
+              <td>Table cell {index}</td>
             ))}
           </tr>
           <tr>
             <td>3</td>
             {Array.from({ length: 12 }).map((_, index) => (
-              <td key={index}>Table cell {index}</td>
+              <td>Table cell {index}</td>
             ))}
           </tr>
         </tbody>
