Fix mixed use of class and className in docs

--- a/www/src/docs/core/CoreButtonDocs.mdx
+++ b/www/src/docs/core/CoreButtonDocs.mdx
@@ -40,7 +40,7 @@ import Example from "../Example";
       <Button as="span">I'm a span but also a button</Button>
     </Example.Preview>
     <Example.Code>
-      ```jsx live className=button-example
+      ```jsx live class=button-example
       import { Button } from "solid-bootstrap-core";
 
       <Button>I'm a Button</Button>
@@ -95,7 +95,7 @@ import Example from "../Example";
       <Button
         {...props}
         class={clsx(
-          props.className,
+          props.class,
           "transition text-md",
           "h-10 bg-white border border-primary text-primary rounded px-8 mt-4 appearance-none text-center whitespace-no-wrap",
           "focus:outline-none focus:ring-4 ring-primary-200",
