Fix custom-width dialog demo
dialogclass -> dialogClass

--- a/www/src/docs/ModalDocs.mdx
+++ b/www/src/docs/ModalDocs.mdx
@@ -545,7 +545,7 @@ import styles from "./ModalDocs.module.css";
       <Modal
         show={show("custom")}
         onHide={handleClose("custom")}
-        dialogclass={styles.modal90w}
+        dialogClass={styles.modal90w}
         aria-labelledby="example-custom-modal-styling-title"
       >
         <Modal.Header closeButton>
@@ -577,7 +577,7 @@ import styles from "./ModalDocs.module.css";
       <Modal
         show={show()}
         onHide={handleClose}
-        dialogclass={styles.modal90w}
+        dialogClass={styles.modal90w}
         aria-labelledby="example-custom-modal-styling-title"
       >
         <Modal.Header closeButton>
