Fix links in docs

--- a/www/src/docs/ListGroupDocs.mdx
+++ b/www/src/docs/ListGroupDocs.mdx
@@ -346,7 +346,7 @@ import Sonnet from "./Sonnet";
 
   <Example title="Tabbed Interfaces">
     <Example.Intro>
-      You can also use the [Tab][tabs] components to create ARIA compliant tabbable
+      You can also use the [Tab](tabs) components to create ARIA compliant tabbable
       interfaces with the `<ListGroup>` component. Swap out the `<Nav>` component
       for the list group and you are good to go.
     </Example.Intro>
