--- a/www/src/docs/NavDocs.mdx
+++ b/www/src/docs/NavDocs.mdx
@@ -100,7 +100,7 @@ import NavApi from "./NavApi";
   <Example title="Alignment and orientation">
     <Example.Intro>
       You can control the the direction and orientation of the
-      `Nav` by making use of the [flexbox layout][0] utility classes.
+      `Nav` by making use of the [flexbox layout](https://getbootstrap.com/docs/4.1/layout/grid/#horizontal-alignment) utility classes.
       By default, navs are left-aligned, but that is easily changed to center or right-aligned.
     </Example.Intro>
     <Example.Preview>
