Fix link to tabs component

--- a/www/src/docs/NavDocs.mdx
+++ b/www/src/docs/NavDocs.mdx
@@ -207,7 +207,7 @@ import NavApi from "./NavApi";
   <Example title="Tabs">
     <Example.Intro>
       Visually represent nav items as "tabs". This style pairs nicely with
-      tabbable regions created by our [Tab components](../tabs/).
+      tabbable regions created by our [Tab components](./tabs).
 
       Note: creating a vertical nav (`.flex-column`) with tabs styling is unsupported by Bootstrap's default stylesheet.
     </Example.Intro>
